# P2P-Transfer

./: .gitignore  CMakeLists.txt  README.md
app/main/: CMakeLists.txt  Main.cpp
app/test/: CMakeLists.txt  Test.cpp
apps/: CMakeLists.txt
apps/main/: CMakeLists.txt  Main.cpp
apps/test/: CMakeLists.txt  Test.cpp
conf/: config.json
libs/: CMakeLists.txt
libs/conf/: CMakeLists.txt  ConfFactory.cpp  ConfFactory.hpp  IConf.hpp  IConfFwd.hpp
libs/conf/conf_json/: ConfJson.cpp  ConfJson.hpp  JsonParser.cpp  JsonParser.hpp
libs/trans/: CMakeLists.txt  ITrans.hpp  ITransFwd.hpp  TransFactory.cpp  TransFactory.hpp
libs/trans/trans_p2p/: Client.cpp  Client.hpp  Input.cpp  Input.hpp  Output.cpp  Output.hpp  Server.cpp  Server.hpp  Streamer.cpp  Streamer.hpp  TransP2P.cpp  TransP2P.hpp
libs/view/: CMakeLists.txt  IView.hpp  IViewFwd.hpp  ViewFactory.cpp
libs/view/view_qt/: ViewQt.cpp  ViewQt.hpp
src/: TransferApp.cpp  TransferApp.hpp
src/conf/: CMakeLists.txt  ConfFactory.cpp  ConfFactory.hpp  IConf.hpp  IConfFwd.hpp
src/conf/conf_json/: ConfJson.cpp  ConfJson.hpp  JsonParser.cpp  JsonParser.hpp
src/trans/: CMakeLists.txt  ITrans.hpp  ITransFwd.hpp  TransFactory.cpp  TransFactory.hpp
src/trans/trans_p2p/: Client.cpp  Client.hpp  Income.cpp  Income.hpp  Input.cpp  Input.hpp  Outcome.cpp  Outcome.hpp  Output.cpp  Output.hpp  Server.cpp  Server.hpp  Streamer.cpp  Streamer.hpp  TransP2P.cpp  TransP2P.hpp
src/view/: CMakeLists.txt  IView.hpp  IViewFwd.hpp  ViewFactory.cpp  ViewFactory.hpp
src/view/view_qt/: CMakeLists.txt  SelectDialog.cpp  SelectDialog.hpp  ViewQt.cpp  ViewQt.hpp
test/: CMakeLists.txt  TransferTest.cpp  TransferTest.hpp
test/conf/: ConfDouble.cpp  ConfDouble.hpp
test/doubles/: CMakeLists.txt
test/doubles/conf/: ConfDouble.cpp  ConfDouble.hpp
test/doubles/view/: ViewDouble.cpp  ViewDouble.hpp
test/trans/: TransTest.cpp  TransTest.hpp
test/utests/: CMakeLists.txt
test/utests/trans/: TransTest.cpp  TransTest.hpp
test/view/: ViewDouble.cpp  ViewDouble.hpp
tests/: CMakeLists.txt
tests/doubles/: CMakeLists.txt
tests/doubles/conf/: ConfDouble.cpp  ConfDouble.hpp
tests/doubles/trans/: TestConLis.cpp  TestConLis.hpp  TestSerLis.cpp  TestSerLis.hpp
tests/doubles/view/: TestLogger.cpp  TestLogger.hpp  ViewDouble.cpp  ViewDouble.hpp
tests/integration/trans/: TransTest.cpp  TransTestUtils.cpp  TransTestUtils.hpp
tests/utests/trans/: TransTest.cpp  TransTest.hpp
